# hspec-tutorial

./: .travis.yml  README.md  stack.yaml  time-service.cabal
driver/: Main.hs
src/: App.hs  Main.hs
test/: AppSpec.hs  Helper.hs
