name:             time-service
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.8

executable time-service
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base    == 4.*
    , transformers
    , time
    , blaze-builder
    , bytestring
    , json-fu
    , scotty >= 0.5
    , wai
    , warp

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , transformers
    , time
    , blaze-builder
    , bytestring
    , json-fu
    , scotty
    , wai
    , hspec >= 1.5.3
    , wai-extra >= 3
    , http-types
    , HUnit
    , QuickCheck
