name:             time-service
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.8

library
  exposed: False
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      App
  build-depends:
      base    == 4.*
    , aeson
    , wai
    , scotty >= 0.5

executable time-service
  ghc-options:
      -Wall
  hs-source-dirs:
      driver
  main-is:
      Main.hs
  build-depends:
      base    == 4.*
    , time-service
    , warp

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , time-service
    , transformers
    , time
    , blaze-builder
    , bytestring
    , scotty
    , aeson
    , wai
    , hspec >= 1.5.3
    , wai-extra >= 3
    , http-types
    , HUnit
    , QuickCheck
