name:             time-service
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.8

library
  exposed: False
  hs-source-dirs:
      src
  exposed-modules:
      App
  build-depends:
      base >= 4.8 && < 5
    , transformers
    , time
    , aeson == 0.9.*
    , wai
    , scotty >= 0.5

executable time-service
  hs-source-dirs:
      driver
  main-is:
      Main.hs
  build-depends:
      base >= 4.8 && < 5
    , time-service
    , time
    , warp

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base >= 4.8 && < 5
    , time-service
    , bytestring
    , http-types
    , wai
    , HUnit
    , QuickCheck
    , hspec >= 1.5.3
    , hspec-wai >= 0.6.4
    , hspec-wai-json
    , wai-extra >= 3
